[package]
name = "rustmod3"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
linkme = "0.3.32"
once_cell = "1.21.3"
paste = "1.0.15"
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
valkey-module = { git = "https://github.com/valkey-io/valkeymodule-rs", branch = "main" }
valkey-module-macros = { git = "https://github.com/valkey-io/valkeymodule-rs", branch = "main" }

[features]
min-redis-compatibility-version-7-2 = ["valkey-module/min-redis-compatibility-version-7-2"]
min-valkey-compatibility-version-8-0 = ["valkey-module/min-valkey-compatibility-version-8-0"]
default = ["min-redis-compatibility-version-7-2"]

[lib]
crate-type = ["cdylib"]
